test/tests/compiler/16_characters_and_strings/invalid_lex/unterminated_char_constant.plx
pub fn main(none) i32 {
    return 'x
}
